# nvim-ez

./: .luarc.json  README.md  README.rst  extra.lua  index.qmd  init.lua  init.vim  misc.lua  pyproject.toml  quarto.lua
docs/: index.qmd
examples/: example.py  example.qmd  example.rst
lua/: extra.lua
lua/conf/: global.lua  keymap.lua  main.lua  settings.lua
lua/misc/: style.lua
lua/plugins/: ai.lua  common.lua  dashboard.lua  editing.lua  git.lua  kanagawa.lua  lsp.lua  quarto.lua  treesitter.lua
old/: .vimrc  init.vim
queries/markdown/: highlights.scm  injections.scm
queries/mermaid/: highlights.scm
queries/python/: highlights.scm  injections.scm
