
# NOTE: This is here because I don't want to install dependencies globally.
#       but instead in a virtual environment. There will also likely be some
#       scripts to deploy this elsewhere since all configuration will be put
#       into version control.
[project]
dependencies = [
  'pynvim',

  # NOTE: For Quarto
  'jupyter',
  'jupyter_client',
  'matplotlib',
  'plotly'
]
